force-app/main/default/objects/Rv_FutureDiffChange__e/Rv_FutureDiffChange__e.object-meta.xml
<CustomObject>
    <label>Rv_FutureDiffChange</label>
    <pluralLabel>Rv_FutureDiffChange</pluralLabel>
</CustomObject>