force-app/main/default/objects/Rv_FutureDiffChange__e/fields/Column__c.field-meta.xml
<CustomField>
    <fullName>Column__c</fullName>
    <label>Column</label>
    <length>30</length>
    <type>Text</type>
</CustomField>