force-app/main/default/objects/Rv_FutureDiffChange__e/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <label>Quote Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>